[gd_scene load_steps=15 format=3 uid="uid://cycuhveh2vmva"]

[ext_resource type="Texture2D" uid="uid://cbywb4caw154k" path="res://Assets/Sprite Pack 1/4 - Bushly/Idle (16 x 16).png" id="1_g3bt6"]
[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_o1fno"]
[ext_resource type="Texture2D" uid="uid://b18vi8bihqvyx" path="res://Assets/Sprite Pack 1/4 - Bushly/Running (16 x 16).png" id="2_ws64c"]
[ext_resource type="Texture2D" uid="uid://n4job4733srg" path="res://Assets/Sprite Pack 1/4 - Bushly/Hurt (16 x 16).png" id="3_mbj2x"]
[ext_resource type="Texture2D" uid="uid://d184urq1tm22m" path="res://Assets/Sprite Pack 1/4 - Bushly/Jumping (16 x 16).png" id="5_mho4i"]
[ext_resource type="PackedScene" uid="uid://cg4mhf7wqaexy" path="res://prefabs/hitbox.tscn" id="6_57bru"]

[sub_resource type="Animation" id="Animation_a2aeu"]
resource_name = "hurt"
length = 0.1
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemySprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_mbj2x")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("enemySprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("enemySprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_6g5rl"]
resource_name = "idle"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemySprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_g3bt6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("enemySprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("enemySprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_5d4q7"]
resource_name = "jump"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemySprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_mho4i")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("enemySprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("enemySprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_mk5q2"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemySprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_ws64c")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("enemySprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("enemySprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hog41"]
_data = {
"hurt": SubResource("Animation_a2aeu"),
"idle": SubResource("Animation_6g5rl"),
"jump": SubResource("Animation_5d4q7"),
"run": SubResource("Animation_mk5q2")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_edw8b"]
size = Vector2(10, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vacch"]
size = Vector2(8, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_25r7w"]
size = Vector2(10, 11)

[node name="enemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_o1fno")
pieces = PackedStringArray("res://Assets/pieces/enemy/piece1.png", "res://Assets/pieces/enemy/piece2.png", "res://Assets/pieces/enemy/piece1.png", "res://Assets/pieces/enemy/piece2.png")

[node name="enemySprite" type="Sprite2D" parent="." groups=["enemy"]]
texture = ExtResource("2_ws64c")
hframes = 6

[node name="AnimationEnemy" type="AnimationPlayer" parent="." groups=["enemy"]]
libraries = {
"": SubResource("AnimationLibrary_hog41")
}

[node name="detectd_wall" type="RayCast2D" parent="." groups=["enemy"]]
target_position = Vector2(7, 0)
collision_mask = 18

[node name="enemyCollision" type="CollisionShape2D" parent="." groups=["enemy"]]
visible = false
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_edw8b")

[node name="HitboxHead" parent="." groups=["enemy"] instance=ExtResource("6_57bru")]

[node name="colission" type="CollisionShape2D" parent="HitboxHead" groups=["enemy"]]
position = Vector2(0, -3.5)
shape = SubResource("RectangleShape2D_vacch")
debug_color = Color(1, 0, 0.129412, 0.419608)

[node name="HitBody" type="Area2D" parent="." groups=["enemy"]]
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBody" groups=["enemy"]]
visible = false
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_25r7w")
debug_color = Color(0.870588, 0, 0.207843, 0.419608)

[connection signal="animation_finished" from="AnimationEnemy" to="." method="_on_animation_enemy_animation_finished"]
[connection signal="area_entered" from="HitBody" to="." method="_on_hit_body_area_entered"]
